# swisspair

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: test.cpp
src/algorithm/: PairingAlgorithm.h
src/algorithm/dfs/: dfsV1.cpp
src/algorithm/hybrid/: hybridV1.cpp
src/algorithm/minCostPerfectMatching/: Graph.h  MinCostPerfectMatchingV1.cpp
src/algorithm/minCostPerfectMatching/matchingAlg/: dilson_pereira.cpp  matching.h
src/algorithm/shared/: Graph.h
src/algorithm/shared/utils/: matches.h  misc.h  pods.h
src/models/: Match.cpp  Match.h  Player.cpp  Player.h
